<resources>
    <string name="app_name">M4359 Touch Screen</string>
    <string name="ext_readings_title">Extens</string>
    <string name="temp_readings_title">Temps</string>
    <string name="load_readings_title">Load</string>
    <string name="timer_readings_title">Timers</string>
    <string name="parameters_config_title">Params</string>
    <string name="options_config_title">Options</string>
    <string name="controls_config_title">Control</string>
    <string name="connect_config_title">Connect</string>
    <string name="left_extens_label">Left</string>
    <string name="right_extens_label">Right</string>
    <string name="percent_strain_label">Strain</string>
    <string name="tare_button">Tare</string>
    <string name="extens_reading_hint">Extens Reading</string>
    <string name="top_temp_label">Top</string>>
    <string name="mid_temp_label">Middle</string>>
    <string name="bot_temp_label">Bottom</string>
    <string name="temps_reading_hint">Temp Reading</string>
    <string name="load_reading_hint">Load Reading</string>>
    <string name="track_load_label">Track</string>
    <string name="peak_load_label">Peak</string>
    <string name="valley_load_label">Valley</string>
    <string name="tare_track_button">Tare Track</string>
    <string name="tare_peak_button">Tare Peak</string>
    <string name="tare_valley_button">Tare Valley</string>
    <string name="tare_left_button">Tare Left</string>
    <string name="tare_right_button">Tare Right</string>
    <string name="delay_time_label">Delay Time</string>
    <string name="remaining_test_time_label">Time Left</string>
    <string name="step_time_label">Step Time</string>
    <string name="total_test_time">Total Time</string>
    <string name="timer_readings_hint">HHHH:mm:ss</string>
    <string name="connected_switch_label">Connected</string>
    <string name="communications_led_label">Comms</string>
    <string name="test_running_led_label">Test Running</string>
    <string name="frame_id_label">Frame ID</string>
    <string name="frame_id_hint">FrameName</string>
    <string name="admin_switch_label">Admin</string>
    <string name="firmware_version_label">Firmware v:</string>
    <string name="firmware_version_hint">1v123</string>
    <string name="frame_status_label">Status</string>
    <string name="frame_status_hint">Disconnected</string>
    <string name="top_switch_label">Top Zone Spool</string>
    <string name="mid_switch_label">Middle Zone Spool</string>
    <string name="bot_switch_label">Bottom Zone Spool</string>
    <string name="edit_text">Edit</string>
    <string name="edit_top_spool_button">Edit Top</string>
    <string name="edit_mid_spool_button">Edit Mid</string>
    <string name="edit_bot_spool_button">Edit Bot</string>
    <string name="step_load_button">Step Load Profile</string>
    <string name="test_profile_button">Test Profile</string>
    <string name="edit_all_spools_button">Thermocouple Spools</string>
    <string name="system_setup_button">System/Sensor Setup</string>
    <string name="jog_up_button"> Jog Up</string>
    <string name="jog_down_button">Jog Down</string>
    <string name="furnace_on_button">Turn Furnace On</string>
    <string name="furnace_off_button">Turn Furnace Off</string>
    <string name="start_test_button">Start Test</string>
    <string name="pause_test_button">Pause Test</string>
    <string name="stop_test_button">Stop Test</string>
    <string name="frame_settings_title">Frame</string>
    <string name="extensometers_settings_tab">Extens</string>
    <string name="temp_settings_title">Temps</string>
    <string name="load_settings_title">Load</string>
    <string name="filters_settings_tab">Filters</string>
    <string name="frame_model_label">Model #</string>
    <string name="frame_serial_label">Serial #</string>
    <string name="frame_location_label">Location</string>
    <string name="save_button">Save</string>
    <string name="nav_control_label">Control</string>
    <string name="nav_sensor_settings_label">Sensor Settings</string>
    <string name="nav_sensor_calibration_label">Sensor Calibration</string>
    <string name="nav_test_settings_label">Test Settings</string>
    <string name="nav_graphing_label">Graphing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spools_label">Thermocouple Spools</string>
</resources>
