<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ConfigViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfigTabLayout" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ReadingsViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReadingsTabLayout" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/ReadingsTabLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/FrameSettingsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ext_readings_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TempSettingsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_readings_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/LoadSettingsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_readings_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/FiltersSettingsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_readings_title" />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/ConfigTabLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ConnectConfigTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_config_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ParametersConfigTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameters_config_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/OptionsConfigTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_config_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ControlsConfigTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controls_config_title" />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>