<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/topSpoolSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/top_switch_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/midSpoolSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/mid_switch_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/topSpoolSwitch"
        app:layout_constraintStart_toStartOf="@+id/topSpoolSwitch"
        app:layout_constraintTop_toBottomOf="@+id/topSpoolSwitch" />

    <Switch
        android:id="@+id/botSpoolSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/bot_switch_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/topSpoolSwitch"
        app:layout_constraintStart_toStartOf="@+id/topSpoolSwitch"
        app:layout_constraintTop_toBottomOf="@+id/midSpoolSwitch" />

    <Button
        android:id="@+id/topSpoolEditButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/edit_text"
        app:layout_constraintBottom_toBottomOf="@+id/topSpoolSwitch"
        app:layout_constraintStart_toEndOf="@+id/topSpoolSwitch"
        app:layout_constraintTop_toTopOf="@+id/topSpoolSwitch" />

    <Button
        android:id="@+id/midSpoolEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text"
        app:layout_constraintBottom_toBottomOf="@+id/midSpoolSwitch"
        app:layout_constraintEnd_toEndOf="@+id/topSpoolEditButton"
        app:layout_constraintTop_toTopOf="@+id/midSpoolSwitch" />

    <Button
        android:id="@+id/botSpoolEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text"
        app:layout_constraintBottom_toBottomOf="@+id/botSpoolSwitch"
        app:layout_constraintEnd_toEndOf="@+id/topSpoolEditButton"
        app:layout_constraintTop_toTopOf="@+id/botSpoolSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>